Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I'm an Elevator Account Executive in NYC. I'm in the process of learning coding to enter a career I'm passionate about  and enjoy doing! follow me on my journey!</p>
